--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,9 +2,12 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.burst": "1.1.2",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.1.3",
+    "com.unity.jobs": "0.2.2-preview.6",
+    "com.unity.mathematics": "1.1.0",
     "com.unity.test-framework": "1.1.3",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.2.6",
